# fail-loud-framework

./: README.md  pyproject.toml
src/fail_loud/: __init__.py  audit.py  core.py  decorators.py  exceptions.py  review.py
tests/: test_fail_loud.py
